# fastapi-celery-template

./: .gitignore  Dockerfile  README.md  app.py  client.py  config.py  database.py  docker-compose.yaml  get_data.sh  models.py  post_data.sh  pyproject.toml  tasks.py
