[project]
name = "fastapi-celery-boilerplate"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "celery>=5.4.0",
    "fastapi",
    "psycopg[binary]>=3.2.2",
    "pydantic>=2.9.2",
    "requests>=2.32.3",
    "sqlalchemy>=0.30.6",
    "uvicorn",
]

[tool.setuptools]
py-modules = []